[package]
name = "oscquery"
version = "0.1.0"
authors = ["Alex Norman <xnor@perfectco.com>"]
edition = "2018"
license_file = "LICENSE-MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.0"
atomic = "0.4.5"

[dev-dependencies]
assert_matches = "1.2"
