[package]
name = "oscquery"
version = "0.1.0"
authors = ["Alex Norman <alex@x37v.info>"]
edition = "2018"
license-file = "LICENSE-MIT"

[dependencies]
petgraph = "0.5.0"
atomic = "0.4.5"
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive", "rc"] }
hyper = "0.13.5"
tokio = { version = "0.2.19", features = ["full"] }
futures = "0.3.4"
rosc = "0.4.0"
tungstenite = "0.10.1"
url = "2.1.1"
tokio-tungstenite = "0.10.1"

[dev-dependencies]
assert_matches = "1.2"
